fix overflow error

--- a/client/src/components/Reservation/index.scss
+++ b/client/src/components/Reservation/index.scss
@@ -36,6 +36,7 @@
         align-items: center;
         justify-content: center;
         margin: 20px;
+        height: 100%;
     }
 
     .steps-action {
